--- a/src/app/modules/admin/components/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.css
@@ -27,7 +27,8 @@
     letter-spacing: 5px;
 }
 
-.aside > div > button {
+.aside button,
+.aside a {
     cursor: pointer;
     align-self: center;
     font-family: "Trebuchet MS";
