--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
             <li routerLink="admin-faq" [routerLinkActive]="'selected'">Preguntas frecuentes</li>
         </ul>
         <div>
-            <button routerLink="">Ir a la página</button>
+            <a routerLink=""><button>Ir a la página</button></a>
             <button (click)="logout()">Logout</button>
         </div>
     </div>
