--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="titulo">
-        <img width="100" height="100" src="../../../assets/iconos/logo-aqua-2.png" alt="logo">
+        <img width="100" height="100" src="{{nosotros?.imagen}}" alt="logo">
         <h1>{{nosotros?.empresa}}</h1>
     </div>
     <ul class="lista_pc">
