--- a/src/app/modules/admin/components/edit-acerca-de/edit-acerca-de.component.html
+++ b/src/app/modules/admin/components/edit-acerca-de/edit-acerca-de.component.html
@@ -18,8 +18,12 @@
                 >Se necesita el nombre de empresa</p>
             </div>
             <div class="input">
-                <label for="imagen">Link de imagen</label>
-                <input type="text" id="imagen" formControlName="imagen">
+                <label for="image">Subir imagen</label>
+                <input type="file" id="image" (change)="getImage($event)">
+                <p 
+                    *ngIf="form.get('imagen')?.hasError('required') && form.get('imagen')?.touched"
+                    class="error"
+                >Se necesita una imagen</p>
             </div>
             <div class="input">
                 <label for="telefono">Teléfono de contacto</label>
