--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.html
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.html
@@ -42,14 +42,10 @@
                     class="error"
                 >Se necesita una categoría</p>
             </div>
-        </div>
-        <div class="link-input">
-            <label for="imagen">Link de imagen</label>
-            <input type="text" id="imagen" formControlName="imagen">
-            <p 
-                *ngIf="form.get('imagen')?.hasError('required') && form.get('imagen')?.touched"
-                class="error"
-            >Se necesita una imagen</p>
+            <div class="input">
+                <label for="image">Nueva imagen</label>
+                <input type="file" id="image" (change)="getImage($event)">
+            </div>
         </div>
         <div class="input">
             <label for="descripcion">Descripción</label>
