--- a/src/app/modules/contacto/components/contacto/contacto.component.html
+++ b/src/app/modules/contacto/components/contacto/contacto.component.html
@@ -1,8 +1,9 @@
 <div class="container">
     <h3>Contacto</h3>
     <div class="info">
+        <a *ngIf="nosotros?.instagram" href="{{nosotros?.instagram}}">Instagram</a>
+        <a *ngIf="nosotros?.linkContacto" href="{{nosotros?.linkContacto}}">Link de contacto</a>
         <p *ngIf="nosotros?.telefono"><span class="title">Teléfono:</span> {{nosotros?.telefono}}</p>
         <p *ngIf="nosotros?.mail"><span class="title">Mail:</span> {{nosotros?.mail}}</p>
-        <p *ngIf="nosotros?.linkContacto"><span class="title">Link de contacto:</span> {{nosotros?.linkContacto}}</p>
     </div>
 </div>
