cambiar alto de imagenes de oferta en celular

--- a/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
+++ b/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
@@ -56,7 +56,7 @@ span.anterior {
 
 /* -------- MEDIA QUERIES -------- */
 @media (max-width: 550px) {
-    img {
+    /* img {
         height: 190px;
-    }
+    } */
 }
