--- a/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
+++ b/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
@@ -18,7 +18,8 @@
 img {
     border-radius: 15px 15px 0 0;
     width: 100%;
-    height: 50%;
+    min-height: 40%;
+    max-height: 40%;
 }
 
 .info {
