--- a/src/app/modules/acerca-de/components/acerca-de/acerca-de.component.html
+++ b/src/app/modules/acerca-de/components/acerca-de/acerca-de.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3>Acerca de "{{nosotros?.empresa}}"</h3>
+    <h3>Acerca de {{nosotros?.empresa}}</h3>
     <div class="info">
         <p>{{nosotros?.informacion}}</p>
     </div>
