--- a/src/app/modules/inicio/components/beneficios/beneficios.component.css
+++ b/src/app/modules/inicio/components/beneficios/beneficios.component.css
@@ -24,10 +24,22 @@
 @media (max-width: 770px) {
     .beneficios {
         padding: 10px 15px;
+        font-size: 0.8rem;
     }
 
     .item {
         gap: 10px;
+        padding: 0 15px;
+    }
+
+    .item > img {
+        width: 25%;
+    }
+}
+
+@media (max-width: 550px) {
+    .item {
+        padding: 0;
     }
 
     .item > img {
