editar vista de compra

--- a/src/app/modules/compra/components/compra/compra.component.html
+++ b/src/app/modules/compra/components/compra/compra.component.html
@@ -18,13 +18,13 @@
     <div class="productos">
         <h4>Productos</h4>
         <div class="producto" *ngFor="let producto of productos">
-            <span>{{producto.nombre}} - {{producto.cantidad}} <span *ngIf="producto.cantidad > 1">unidades</span><span *ngIf="producto.cantidad == 1">unidad</span></span>
+            <span><img src="{{producto.imagen}}" alt="Imagen producto"> {{producto.nombre}} - {{producto.cantidad}} <span *ngIf="producto.cantidad > 1">unidades</span><span *ngIf="producto.cantidad == 1">unidad</span></span>
             <p *ngIf="!producto.oferta">$ {{producto.precio * producto.cantidad}}</p>
             <p *ngIf="producto.oferta">$ {{(producto.precio * (1 - producto.oferta / 100)) * producto.cantidad}}</p>
         </div>
         <div class="total">
             <span>Total:</span>
-            <p>${{precio}}</p>
+            <p>$ {{precio}}</p>
         </div>
     </div>
 </div>
