--- a/src/app/modules/compra/components/compra/compra.component.css
+++ b/src/app/modules/compra/components/compra/compra.component.css
@@ -1,12 +1,11 @@
 .container {
     width: 80%;
-    height: 50%;
+    display: flex;
+    flex-direction: column-reverse;
     background-color: var(--bg-color);
     border-radius: 15px;
     margin: auto;
-    margin-top: 10%;
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
+    margin-top: 5%;
 }
 
 .compra,
@@ -44,7 +43,11 @@ h4 {
 .productos {
     background-color: var(--main-light-color);
     border-radius: 15px;
-    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.producto {
+    padding-bottom: 10px;
 }
 
 .producto,
@@ -52,6 +55,21 @@ h4 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.producto > span {
+    gap: 5px;
+    display: flex;
+    align-items: center;
+    width: 70%;
+}
+
+.producto img {
+    display: flex;
+    border-radius: 10px;
+    width: 10%;
+    height: 10%;
+    margin-right: 10px;
 }
 
 .total {
@@ -64,17 +82,24 @@ h4 {
 }
 
 /* -------- MEDIA QUERIES -------- */
-@media (max-width: 550px) {
+@media (max-width: 770px) {
     .container {
         width: 95%;
     }
-
+    
     .producto > p {
-        width: 50%;
         text-align: end;
     }
 
     .compra > button {
         margin-right: 5px;
+    }
+}
+
+@media (max-width: 550px) {
+    .producto img {
+        border-radius: 5px;
+        width: 15%;
+        height: 15%;
     }
 }
