--- a/src/app/modules/admin/components/add-preguntas/add-preguntas.component.css
+++ b/src/app/modules/admin/components/add-preguntas/add-preguntas.component.css
@@ -9,17 +9,18 @@ button {
     border-radius: 10px;
 }
 
-form {
+form,
+.form {
     display: flex;
     flex-direction: column;
 }
 
 .form {
-    display: flex;
     padding: 20px 0;
 }
 
-input {
+input,
+textarea {
     border: none;
     background-color: #eee;
     padding: 5px 10px;
@@ -29,12 +30,32 @@ input {
     font-size: 1rem;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
     outline: none;
+}
+
+input,
+textarea {
+    min-width: 50%;
+    max-width: 50%;
+}
+
+textarea {
+    min-height: 100px;
+    max-height: 300px;
 }
 
 .error {
     color: red;
     padding-bottom: 10px;
     font-size: 0.8rem;
+}
+
+@media (max-width: 770px) {
+    input,
+    textarea {
+        min-width: 95%;
+        max-width: 95%;
+    }
 }
