--- a/src/app/modules/admin/components/edit-faq/edit-faq.component.css
+++ b/src/app/modules/admin/components/edit-faq/edit-faq.component.css
@@ -23,7 +23,8 @@ form {
     padding: 20px 0;
 }
 
-input {
+input,
+textarea {
     border: none;
     background-color: #eee;
     padding: 5px 10px;
@@ -33,12 +34,32 @@ input {
     font-size: 1rem;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
     outline: none;
+}
+
+input,
+textarea {
+    min-width: 50%;
+    max-width: 50%;
+}
+
+textarea {
+    min-height: 100px;
+    max-height: 300px;
 }
 
 .error {
     color: red;
     padding-bottom: 10px;
     font-size: 0.8rem;
+}
+
+@media (max-width: 770px) {
+    input,
+    textarea {
+        min-width: 95%;
+        max-width: 95%;
+    }
 }
