agregar pre line en descripcion de productos y respuestas a preguntas

--- a/src/app/modules/productos/components/producto-pagina/producto-pagina.component.css
+++ b/src/app/modules/productos/components/producto-pagina/producto-pagina.component.css
@@ -70,6 +70,10 @@ span.anterior {
     padding-bottom: 20px;
 }
 
+.descripcion > p {
+    white-space: pre-line;
+}
+
 .compra {
     display: flex;
     align-items: center;
