--- a/src/app/modules/contacto/components/contacto/contacto.component.css
+++ b/src/app/modules/contacto/components/contacto/contacto.component.css
@@ -8,16 +8,23 @@ h3 {
     padding-bottom: 20px;
 }
 
-.info > a {
+.link > a {
     color: #000;
+    text-decoration: none;
 }
 
-.info > p > .title {
-    font-weight: 600;
+.link {
+    display: flex;
+    align-items: center;
 }
 
-.info > p,
-.info > a {
+.link > img {
+    transform: scale(1.1);
+    margin-right: 15px;
+}
+
+.link > p,
+.link > a {
     font-size: 1.3rem;
     padding: 10px 0;
 }
