--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,14 @@
 <div class="container">
     <div class="redes">
         <h3>{{nosotros?.empresa}}</h3>
-        <a rel="noopener" href="{{nosotros?.instagram}}" target="_blank">
+        <a *ngIf="nosotros?.instagram" rel="noopener" href="https://www.instagram.com/{{nosotros?.instagram}}" target="_blank">
             <img src="../../../assets/iconos/instagram.svg" alt="Instagram">
         </a>
+        <a *ngIf="nosotros?.telefono" rel="noopener" href="https://wa.me/{{nosotros?.telefono}}" target="_blank">
+            <img src="../../../assets/iconos/whatsapp.svg" alt="Whatsapp">
+        </a>
     </div>
-    <p>Página desarrollada por <a rel="noopener" target="_blank" href="https://pablobarcala-f9981.web.app/">Pablo Barcala</a></p> 
+    <div class="firma">
+        <p>Página desarrollada por <a rel="noopener" target="_blank" href="https://pablobarcala-f9981.web.app/">Pablo Barcala <img src="../../../assets/iconos/logo-pb.png" width="24" height="24" alt="Logo Pablo Barcala"></a></p> 
+    </div>
 </div>
