--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <h5>Bolsa de compra</h5>
+        <h5>Carrito</h5>
         <p *ngIf="productos.length == 0">~ No hay productos seleccionados ~</p>
         <div
             class="item"
