--- a/src/app/modules/inicio/components/carousel/carousel.component.css
+++ b/src/app/modules/inicio/components/carousel/carousel.component.css
@@ -10,9 +10,9 @@ div {
 }
 
 h3 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2rem;
-    font-weight: 200;
+    font-weight: 100;
     padding: 0 20px;
 }
 
