--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -10,7 +10,7 @@
             <div class="info">
                 <div>
                     <h5>{{producto.nombre}}</h5>
-                    <h5>Cantidad: {{producto.cantidad}}</h5>
+                    <h5 id="cantidad">Cantidad: {{producto.cantidad}}</h5>
                     <div class="categoria">{{producto.categoria.nombre}}</div>
                 </div>
                 <div>
