--- a/src/app/modules/productos/components/producto-item/producto-item.component.css
+++ b/src/app/modules/productos/components/producto-item/producto-item.component.css
@@ -85,24 +85,17 @@ button {
     color: #fff;
 }
 
-.botones > form > input,
-.botones_cel > form > input {
+select {
     font-size: 1rem;
     border: #ccc 1px solid;
     border-radius: 10px;
     text-align: center;
     padding: 10px;
+    width: 100%;
 }
 
-input:focus {
+select:focus {
     outline: none;
-}
-
-.error {
-    font-size: 0.7rem;
-    min-width: 20%;
-    max-width: 20%;
-    font-weight: 600;
 }
 
 /* -------- MEDIA QUERIES -------- */
