--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <h5>Carrito</h5>
+        <h4>Carrito</h4>
         <p *ngIf="productos.length == 0">~ No hay productos seleccionados ~</p>
         <div
             class="item"
@@ -11,22 +11,19 @@
                 <div>
                     <h5>{{producto.nombre}}</h5>
                     <h5 id="cantidad">Cantidad: {{producto.cantidad}}</h5>
-                    <div class="categoria">{{producto.categoria.nombre}}</div>
                 </div>
                 <div>
                     <p *ngIf="!producto.oferta">$ {{producto.precio * producto.cantidad}}</p>
                     <p *ngIf="producto.oferta">$ {{(producto.precio * (1 - producto.oferta / 100)) * producto.cantidad}}</p>
                     <div class="eliminar_container">
                         <form action="" [formGroup]="form">
-                            <input 
-                                title="Cantidad" 
-                                type="number" 
-                                min="0" 
-                                max="{{producto.cantidad}}"
-                                formControlName="cantidad"
-                            >
+                            <select title="Cantidad" formControlName="cantidad">
+                                <option *ngFor="let i of stockProducto(producto)" [value]="i">{{i}}</option>
+                            </select>
                         </form>
-                        <button class="eliminar" (click)="eliminarDeCarrito(i, producto)">Eliminar</button>
+                        <button title="Eliminar cantidad" type="button" class="eliminar" (click)="eliminarDeCarrito(i, producto)">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M7 21q-.825 0-1.413-.588T5 19V6q-.425 0-.713-.288T4 5q0-.425.288-.713T5 4h4q0-.425.288-.713T10 3h4q.425 0 .713.288T15 4h4q.425 0 .713.288T20 5q0 .425-.288.713T19 6v13q0 .825-.588 1.413T17 21H7Zm5-7.1l1.9 1.9q.275.275.7.275t.7-.275q.275-.275.275-.7t-.275-.7l-1.9-1.9l1.9-1.9q.275-.275.275-.7t-.275-.7q-.275-.275-.7-.275t-.7.275L12 11.1l-1.9-1.9q-.275-.275-.7-.275t-.7.275q-.275.275-.275.7t.275.7l1.9 1.9l-1.9 1.9q-.275.275-.275.7t.275.7q.275.275.7.275t.7-.275l1.9-1.9Z"/></svg>
+                        </button>
                     </div>
                 </div>
             </div>
